loan_validator_portal/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-validator-portal
  namespace: default
  labels:
    app: loan-validator-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-validator-portal
  template:
    metadata:
      labels:
        app: loan-validator-portal
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      serviceAccountName:  loan-validator-portal-service-account
      containers:
      - name: loan-validator-portal
        image: daasnigeria/daasrepo:loan-validator-portal
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "400m"
