loan_validator_portal/k8s/network-policies.yaml
# Network Policy for API Gateway
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loan-validator-portal-netpol
  namespace: default
  annotations:
   argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app: loan-validator-portal
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {} # Allow all ingress (external traffic)
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: government-api
    ports:
    - protocol: TCP
      port: 8081
  - to:
    - podSelector:
        matchLabels:
          app: otel-collector
    ports:
    - port: 4317
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP

  - {} # Allow other egress
